<resources>
    <string name="app_name">My Fifth Application</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="ac">A/C</string>
    <string name="posneg">+/-</string>
    <string name="div">÷</string>
    <string name="percant">%</string>
    <string name="rand">Rand</string>
    <string name="pi">π</string>
    <string name="tanh">tanh</string>
    <string name="cosh">cosh</string>
    <string name="sinh">sinh</string>
    <string name="deg">deg</string>
    <string name="ee">ee</string>
    <string name="e">e</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="x">x!</string>
    <string name="log">log10</string>
    <string name="ln">ln</string>
    <string name="rad">y√x</string>
    <string name="rad3">3√x</string>
    <string name="rad2">2√x</string>
    <string name="x1">1/x</string>
    <string name="x10">10x</string>
    <string name="ex">e^x</string>
    <string name="xy">x^y</string>
    <string name="x3">x^3</string>
    <string name="x2">x2</string>
    <string name="nd2">2nd</string>
    <string name="mr">mr</string>
    <string name="mpos">m+</string>
    <string name="mneg">m-</string>
    <string name="mc">mc</string>
    <string name="pr">)</string>
    <string name="pra">(</string>
</resources>