<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/zero"
        android:layout_width="@dimen/zero_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/zero"
        android:paddingStart="25dp"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/point"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/point"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/equal"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/func"
        android:text="@string/equal"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/plus"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/func"
        android:text="@string/plus"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/func"
        android:text="@string/multiply"
        android:textSize="@dimen/multiply_size"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/minus"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/func"
        android:text="@string/minus"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:id="@+id/one"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/one"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/two"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/three"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/four"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/four"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/seven"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/seven"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac" />

    <Button
        android:id="@+id/eight"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/eight"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/posneg" />

    <Button
        android:id="@+id/nine"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/nine"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/five"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/five"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/number"
        android:text="@string/six"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/percent"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/funcblack"
        android:text="@string/percant"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/posneg"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <Button
        android:id="@+id/ac"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/funcblack"
        android:text="@string/ac"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ac_text_size"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/posneg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <Button
        android:id="@+id/div"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/func"
        android:text="@string/div"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <Button
        android:id="@+id/posneg"
        android:layout_width="@dimen/number_width"
        android:layout_height="@dimen/number_width"
        android:background="@drawable/funcblack"
        android:text="@string/posneg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ac"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="@dimen/screen_width"
        android:layout_height="@dimen/screen_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/screen"
        android:gravity="start"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/function"
        android:layout_width="@dimen/function_width"
        android:layout_height="@dimen/screen_height"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/function"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>